# geospatial-audit-flow

Config-driven QA and analysis pipeline for geospatial datasets/: CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
Config-driven QA and analysis pipeline for geospatial datasets/docs/: analysis_recipes.md  checks.md  configuration.md  index.md  quickstart.md  roadmap.md
Config-driven QA and analysis pipeline for geospatial datasets/examples/urban_green_space_demo/: README.md  config.yml
Config-driven QA and analysis pipeline for geospatial datasets/examples/urban_green_space_demo/data/: districts.geojson  parks.geojson
Config-driven QA and analysis pipeline for geospatial datasets/outputs/: check_report.md  check_results.json  cleaned.gpkg  park_area_by_type.csv  parks_by_district.csv  preview_map.html  report.html  report.md
Config-driven QA and analysis pipeline for geospatial datasets/scripts/: make_sample_data.py
Config-driven QA and analysis pipeline for geospatial datasets/src/geo_audit_flow.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
Config-driven QA and analysis pipeline for geospatial datasets/src/geoaudit/: __init__.py  analysis.py  checks.py  cli.py  config.py  fixes.py  io.py  map.py  models.py  report.py  utils.py
Config-driven QA and analysis pipeline for geospatial datasets/tests/: test_analysis.py  test_checks.py  test_config.py  test_fixes.py  test_io.py
Config-driven QA and analysis pipeline for geospatial datasets/tests/fixtures/: invalid_polygon.geojson  missing_values.geojson  valid_points.geojson
